fix long name overflows in bevies dropdown

--- a/public/less/post/NewPostPanel.less
+++ b/public/less/post/NewPostPanel.less
@@ -107,8 +107,17 @@
 			.mui-menu.mui-visible {
 				height: auto !important;
 			}
+			.mui-menu .mui-paper-container {
+				overflow: hidden !important;
+			}
 			&:not(.mui-open).mui-drop-down-menu .mui-menu-control .mui-menu-control-bg {
 				background-color: transparent;
+			}
+			.mui-menu-label {
+				height: 45px;
+				overflow-y: hidden;
+				overflow-x: hidden;
+				width: 120px;
 			}
 		}
 	}
